src/ui/radarr_ui/system/snapshots/managarr__ui__radarr_ui__system__system_ui_tests__tests__system_ui_renders_loading_state.snap
---
source: src/ui/radarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ─────────────────────────────────────────────────╮╭  Queued Events  ─────────────────────────────────────────╮
│                                                          ││                                                          │
│                                                          ││                                                          │
│ Loading ...                                              ││ Loading ...                                              │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
╭  Logs  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│                                                                                                                      │
│ Loading ...                                                                                                          │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
